@@ -1,3 +1,8 @@
+2010-09-20  Richard Henderson  <rth@redhat.com>
+
+	* config/tc-alpha.c (tc_gen_reloc): Remove hack around
+	bfd_perform_reloc for OBJ_ELF.
+
 2010-09-17  Tejas Belagod  <tejas.belagod@arm.com>
 
 	* config/tc-arm.c (do_t_ldmstm): Add logic to handle single-register
